update updates page

--- a/RockstarGamesLauncher/Resources/Styles/RoundedButton.xaml
+++ b/RockstarGamesLauncher/Resources/Styles/RoundedButton.xaml
@@ -9,6 +9,7 @@
                         x:Name="border"
                         Padding="38,11,38,11"
                         Background="Transparent"
+                        VerticalAlignment="Center"
                         BorderThickness="1"
                         CornerRadius="25">
                         <Border.BorderBrush>
