settings general page, rounded fill button

--- a/RockstarGamesLauncher/App.xaml
+++ b/RockstarGamesLauncher/App.xaml
@@ -11,6 +11,7 @@
                 <ResourceDictionary Source="Resources/Styles/Colors.xaml" />
                 <ResourceDictionary Source="Resources/Styles/BuyButton.xaml" />
                 <ResourceDictionary Source="Resources/Styles/RoundedButton.xaml" />
+                <ResourceDictionary Source="Resources/Styles/RoundedFillButton.xaml" />
                 <ResourceDictionary Source="Resources/Styles/AsideNavItem.xaml" />
                 <ResourceDictionary Source="Resources/Styles/AsideNavIconItem.xaml" />
             </ResourceDictionary.MergedDictionaries>
