--- a/RockstarGamesLauncher/Views/Settings/SettingsGeneralView.xaml
+++ b/RockstarGamesLauncher/Views/Settings/SettingsGeneralView.xaml
@@ -20,132 +20,112 @@
             <Border
                 Grid.Row="1"
                 Grid.Column="0"
-                MaxWidth="750"
-                Padding="35,0,35,0">
+                Width="750"
+                Margin="0,-22,0,0"
+                Padding="50,0,50,0"
+                HorizontalAlignment="Left">
                 <StackPanel HorizontalAlignment="Stretch">
-                    <Grid Height="80">
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="1*" />
-                            <ColumnDefinition Width="1*" />
-                        </Grid.ColumnDefinitions>
+                    <Border Padding="0,20,0,20">
+                        <Grid>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="*" />
+                                <ColumnDefinition Width="Auto" />
+                            </Grid.ColumnDefinitions>
+                            <StackPanel Grid.Column="0" Margin="0,0,10,0">
+                                <Label VerticalAlignment="Center" FontSize="16">Load when computer starts</Label>
+                                <TextBlock
+                                    Margin="0,6,0,0"
+                                    FontSize="14"
+                                    Opacity="0.65"
+                                    Text="Load the Rockstar Games Launcher when you start your computer"
+                                    TextWrapping="Wrap" />
+                            </StackPanel>
+                            <Button
+                                Grid.Column="1"
+                                HorizontalAlignment="Right"
+                                Style="{StaticResource RoundedButton}">
+                                VIEW POLICY
+                            </Button>
+                        </Grid>
+                    </Border>
 
-                        <Label
-                            Grid.Column="0"
-                            VerticalAlignment="Center"
-                            FontSize="20">
-                            Language
-                        </Label>
-                        <ComboBox
-                            Grid.Column="1"
-                            Height="40"
-                            VerticalContentAlignment="Center">
-                            <ComboBoxItem Content="English" />
-                            <ComboBoxItem Content="Polski" />
-                            <ComboBoxItem Content="Italiano" />
-                        </ComboBox>
-                    </Grid>
-                    <Border Height="0.35" Background="White" />
-                    <DockPanel Height="80">
-                        <StackPanel VerticalAlignment="Center">
-                            <Label VerticalAlignment="Center" FontSize="20">Load when computer starts</Label>
-                            <Label
-                                VerticalAlignment="Center"
-                                FontSize="14"
-                                Opacity="0.65">
-                                Load the Rockstar Games Launcher when you start your computer
-                            </Label>
-                        </StackPanel>
-                        <Button
-                            Width="160"
-                            Height="40"
-                            HorizontalAlignment="Right"
-                            VerticalAlignment="Center"
-                            FontSize="16"
-                            Foreground="White">
-                            VIEW POLICY
-                        </Button>
-                    </DockPanel>
-                    <Border Height="0.35" Background="White" />
-                    <Grid Height="80">
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="*" />
-                            <ColumnDefinition Width="Auto" />
-                        </Grid.ColumnDefinitions>
+                    <Border Height="0.25" Background="White" />
 
-                        <StackPanel Grid.Column="0" VerticalAlignment="Center">
-                            <Label VerticalAlignment="Center" FontSize="20">Hibernate when running a game</Label>
-                            <TextBlock
-                                VerticalAlignment="Center"
-                                FontSize="14"
-                                Opacity="0.65"
-                                Text="When selected, the Rockstar Games Launcher will hiberate in the background whilst a game is running"
-                                TextWrapping="Wrap" />
-                        </StackPanel>
-                        <Button
-                            Grid.Column="1"
-                            Width="160"
-                            Height="40"
-                            HorizontalAlignment="Right"
-                            VerticalAlignment="Center"
-                            FontSize="16"
-                            Foreground="White">
-                            VIEW POLICY
-                        </Button>
-                    </Grid>
-                    <Border Height="0.35" Background="White" />
-                    <Grid Height="80">
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="*" />
-                            <ColumnDefinition Width="Auto" />
-                        </Grid.ColumnDefinitions>
+                    <Border Padding="0,20,0,20">
+                        <Grid>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="*" />
+                                <ColumnDefinition Width="Auto" />
+                            </Grid.ColumnDefinitions>
+                            <StackPanel Grid.Column="0" Margin="0,0,10,0">
+                                <Label VerticalAlignment="Center" FontSize="16">Hibernate when running a game</Label>
+                                <TextBlock
+                                    Margin="0,6,0,0"
+                                    FontSize="14"
+                                    Opacity="0.65"
+                                    Text="When selected, the Rockstar Games Launcher will hibernate in the background whilst a game is running"
+                                    TextWrapping="Wrap" />
+                            </StackPanel>
+                            <Button
+                                Grid.Column="1"
+                                HorizontalAlignment="Right"
+                                Style="{StaticResource RoundedButton}">
+                                DELETE
+                            </Button>
+                        </Grid>
+                    </Border>
 
-                        <StackPanel Grid.Column="0" VerticalAlignment="Center">
-                            <Label VerticalAlignment="Center" FontSize="20">Minimize on close</Label>
-                            <TextBlock
-                                VerticalAlignment="Center"
-                                FontSize="14"
-                                Opacity="0.65"
-                                Text="Send the Rockstar Games Launcher to the system tray when closing the active window"
-                                TextWrapping="Wrap" />
-                        </StackPanel>
-                        <Button
-                            Grid.Column="1"
-                            Width="160"
-                            Height="40"
-                            HorizontalAlignment="Right"
-                            VerticalAlignment="Center"
-                            FontSize="16"
-                            Foreground="White">
-                            VIEW POLICY
-                        </Button>
-                    </Grid>
-                    <Border Height="0.35" Background="White" />
-                    <Grid Height="80">
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="*" />
-                            <ColumnDefinition Width="Auto" />
-                        </Grid.ColumnDefinitions>
+                    <Border Height="0.25" Background="White" />
 
-                        <StackPanel Grid.Column="0" VerticalAlignment="Center">
-                            <Label VerticalAlignment="Center" FontSize="20">Scan PC for supported installs</Label>
-                            <TextBlock
-                                VerticalAlignment="Center"
-                                FontSize="14"
-                                Opacity="0.65"
-                                Text="Scan your computer for titles supported by the Rockstar Games Launcher and add them to your library"
-                                TextWrapping="Wrap" />
-                        </StackPanel>
-                        <Button
-                            Grid.Column="1"
-                            Width="160"
-                            Height="40"
-                            HorizontalAlignment="Right"
-                            VerticalAlignment="Center"
-                            FontSize="16"
-                            Foreground="White">
-                            VIEW POLICY
-                        </Button>
-                    </Grid>
+                    <Border Padding="0,20,0,20">
+                        <Grid>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="*" />
+                                <ColumnDefinition Width="Auto" />
+                            </Grid.ColumnDefinitions>
+                            <StackPanel Grid.Column="0" Margin="0,0,10,0">
+                                <Label VerticalAlignment="Center" FontSize="16">Minimize on close</Label>
+                                <TextBlock
+                                    Margin="0,6,0,0"
+                                    FontSize="14"
+                                    Opacity="0.65"
+                                    Text="Send the Rockstar Games Launcher to the system tray when closing the active window"
+                                    TextWrapping="Wrap" />
+                            </StackPanel>
+                            <Button
+                                Grid.Column="1"
+                                HorizontalAlignment="Right"
+                                Style="{StaticResource RoundedButton}">
+                                DELETE
+                            </Button>
+                        </Grid>
+                    </Border>
+
+                    <Border Height="0.25" Background="White" />
+
+                    <Border Padding="0,20,0,20">
+                        <Grid>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="*" />
+                                <ColumnDefinition Width="Auto" />
+                            </Grid.ColumnDefinitions>
+                            <StackPanel Grid.Column="0" Margin="0,0,10,0">
+                                <Label VerticalAlignment="Center" FontSize="16">Scan PC for supported installs</Label>
+                                <TextBlock
+                                    Margin="0,6,0,0"
+                                    FontSize="14"
+                                    Opacity="0.65"
+                                    Text="Scan your computer for titles supported by the Rockstar Games Launcher and add them to your library"
+                                    TextWrapping="Wrap" />
+                            </StackPanel>
+                            <Button
+                                Grid.Column="1"
+                                HorizontalAlignment="Right"
+                                Style="{StaticResource RoundedFillButton}">
+                                SCAN NOW
+                            </Button>
+                        </Grid>
+                    </Border>
                 </StackPanel>
             </Border>
         </Grid>
