--- a/RockstarGamesLauncher/Resources/Styles/Reset.xaml
+++ b/RockstarGamesLauncher/Resources/Styles/Reset.xaml
@@ -3,10 +3,8 @@
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="Button">
-                    <Border
-                    x:Name="border"
-                    Opacity="0.65">
-                        <ContentPresenter Cursor="Hand"/>
+                    <Border x:Name="border" Opacity="0.65">
+                        <ContentPresenter Cursor="Hand" />
                     </Border>
                     <ControlTemplate.Triggers>
                         <Trigger Property="IsMouseOver" Value="True">
@@ -14,10 +12,10 @@
                                 <BeginStoryboard>
                                     <Storyboard>
                                         <DoubleAnimation
-                                        Storyboard.TargetName="border"
-                                        Storyboard.TargetProperty="Opacity"
-                                        To="1"
-                                        Duration="0:0:0.25" />
+                                            Storyboard.TargetName="border"
+                                            Storyboard.TargetProperty="Opacity"
+                                            To="1"
+                                            Duration="0:0:0.25" />
                                     </Storyboard>
                                 </BeginStoryboard>
                             </Trigger.EnterActions>
@@ -25,10 +23,10 @@
                                 <BeginStoryboard>
                                     <Storyboard>
                                         <DoubleAnimation
-                                        Storyboard.TargetName="border"
-                                        Storyboard.TargetProperty="Opacity"
-                                        To="0.65"
-                                        Duration="0:0:0.25" />
+                                            Storyboard.TargetName="border"
+                                            Storyboard.TargetProperty="Opacity"
+                                            To="0.65"
+                                            Duration="0:0:0.25" />
                                     </Storyboard>
                                 </BeginStoryboard>
                             </Trigger.ExitActions>
@@ -46,5 +44,61 @@
 
     <Style TargetType="TextBlock">
         <Setter Property="Foreground" Value="White" />
+    </Style>
+
+    <Style TargetType="{x:Type CheckBox}">
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type CheckBox}">
+                    <Border
+                        Width="18"
+                        Height="18"
+                        Padding="2"
+                        Background="Transparent"
+                        BorderThickness="1"
+                        Cursor="Hand">
+                        <Border.BorderBrush>
+                            <SolidColorBrush
+                                x:Name="border"
+                                Opacity="0.65"
+                                Color="White" />
+                        </Border.BorderBrush>
+                        <Border
+                            x:Name="box"
+                            Background="#FFAB00"
+                            Opacity="0" />
+                    </Border>
+                    <ControlTemplate.Triggers>
+                        <Trigger Property="IsChecked" Value="True">
+                            <Setter TargetName="box" Property="Opacity" Value="1" />
+                        </Trigger>
+                        <Trigger Property="IsMouseOver" Value="True">
+                            <Trigger.EnterActions>
+                                <BeginStoryboard>
+                                    <Storyboard>
+                                        <DoubleAnimation
+                                            Storyboard.TargetName="border"
+                                            Storyboard.TargetProperty="Opacity"
+                                            To="1"
+                                            Duration="0:0:0.25" />
+                                    </Storyboard>
+                                </BeginStoryboard>
+                            </Trigger.EnterActions>
+                            <Trigger.ExitActions>
+                                <BeginStoryboard>
+                                    <Storyboard>
+                                        <DoubleAnimation
+                                            Storyboard.TargetName="border"
+                                            Storyboard.TargetProperty="Opacity"
+                                            To="0.65"
+                                            Duration="0:0:0.25" />
+                                    </Storyboard>
+                                </BeginStoryboard>
+                            </Trigger.ExitActions>
+                        </Trigger>
+                    </ControlTemplate.Triggers>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
     </Style>
 </ResourceDictionary>
