--- a/RockstarGamesLauncher/MainWindow.xaml
+++ b/RockstarGamesLauncher/MainWindow.xaml
@@ -20,118 +20,120 @@
     <WindowChrome.WindowChrome>
         <WindowChrome
             CaptionHeight="0"
-            CornerRadius="0"
+            CornerRadius="10"
             GlassFrameThickness="0" />
     </WindowChrome.WindowChrome>
 
-    <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="*" />
-        </Grid.RowDefinitions>
-
-        <Grid Panel.ZIndex="1">
+    <Border BorderThickness="0.25" CornerRadius="10">
+        <Grid>
             <Grid.RowDefinitions>
-                <RowDefinition Height="35" />
-                <RowDefinition Height="60" />
+                <RowDefinition Height="*" />
             </Grid.RowDefinitions>
 
-            <DockPanel
-                Grid.Row="0"
-                Background="Transparent"
-                MouseLeftButtonDown="DragApp">
-                <Border Padding="1">
-                    <StackPanel HorizontalAlignment="Right" Orientation="Horizontal">
-                        <Button
-                            Width="20"
-                            Height="20"
-                            Margin="5,0,5,0"
-                            VerticalAlignment="Center"
-                            BorderThickness="0"
-                            Click="MinimizeApp">
-                            <Image
-                                Width="15"
-                                Height="15"
-                                Source="/Resources/Icons/MinimizeIcon.png" />
-                        </Button>
-                        <Button
-                            Width="20"
-                            Height="20"
-                            Margin="5,0,5,0"
-                            VerticalAlignment="Center"
-                            BorderThickness="0"
-                            Click="MaximizeApp">
-                            <Image
-                                Width="15"
-                                Height="15"
-                                Source="/Resources/Icons/MaximizeIcon.png" />
-                        </Button>
-                        <Button
-                            Width="20"
-                            Height="20"
-                            Margin="5,0,5,0"
-                            VerticalAlignment="Center"
-                            BorderThickness="0"
-                            Click="CloseApp">
-                            <Image
-                                Width="15"
-                                Height="15"
-                                Source="/Resources/Icons/CloseIcon.png" />
-                        </Button>
-                    </StackPanel>
-                </Border>
-            </DockPanel>
+            <Grid Panel.ZIndex="1">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="35" />
+                    <RowDefinition Height="60" />
+                </Grid.RowDefinitions>
 
-            <Border
-                Grid.Row="1"
-                Margin="0,10,0,0"
-                Padding="35,0,35,0">
-                <DockPanel>
-                    <Border
-                        Width="40"
-                        Height="36"
-                        BorderThickness="0"
-                        Opacity="1">
-                        <Image
-                            Grid.Row="0"
-                            Width="40"
-                            Height="40"
-                            HorizontalAlignment="Left"
-                            VerticalAlignment="Top"
-                            Source="/Resources/Images/RockstarGamesLogo.png" />
+                <DockPanel
+                    Grid.Row="0"
+                    Background="Transparent"
+                    MouseLeftButtonDown="DragApp">
+                    <Border Padding="1">
+                        <StackPanel HorizontalAlignment="Right" Orientation="Horizontal">
+                            <Button
+                                Width="20"
+                                Height="20"
+                                Margin="5,0,5,0"
+                                VerticalAlignment="Center"
+                                BorderThickness="0"
+                                Click="MinimizeApp">
+                                <Image
+                                    Width="15"
+                                    Height="15"
+                                    Source="/Resources/Icons/MinimizeIcon.png" />
+                            </Button>
+                            <Button
+                                Width="20"
+                                Height="20"
+                                Margin="5,0,5,0"
+                                VerticalAlignment="Center"
+                                BorderThickness="0"
+                                Click="MaximizeApp">
+                                <Image
+                                    Width="15"
+                                    Height="15"
+                                    Source="/Resources/Icons/MaximizeIcon.png" />
+                            </Button>
+                            <Button
+                                Width="20"
+                                Height="20"
+                                Margin="5,0,5,0"
+                                VerticalAlignment="Center"
+                                BorderThickness="0"
+                                Click="CloseApp">
+                                <Image
+                                    Width="15"
+                                    Height="15"
+                                    Source="/Resources/Icons/CloseIcon.png" />
+                            </Button>
+                        </StackPanel>
                     </Border>
+                </DockPanel>
 
-                    <StackPanel
-                        HorizontalAlignment="Right"
-                        VerticalAlignment="Center"
-                        Orientation="Horizontal">
-                        <ListView
+                <Border
+                    Grid.Row="1"
+                    Margin="0,10,0,0"
+                    Padding="35,0,35,0">
+                    <DockPanel>
+                        <Border
+                            Width="40"
+                            Height="36"
+                            BorderThickness="0"
+                            Opacity="1">
+                            <Image
+                                Grid.Row="0"
+                                Width="40"
+                                Height="40"
+                                HorizontalAlignment="Left"
+                                VerticalAlignment="Top"
+                                Source="/Resources/Images/RockstarGamesLogo.png" />
+                        </Border>
+
+                        <StackPanel
                             HorizontalAlignment="Right"
                             VerticalAlignment="Center"
-                            Background="Transparent"
-                            BorderThickness="0"
-                            ItemContainerStyle="{StaticResource NavItem}"
-                            ItemsSource="{Binding NavItems}"
-                            SelectedIndex="{Binding SelectedPageIndex}"
-                            SelectionMode="Single">
-                            <ListView.ItemsPanel>
-                                <ItemsPanelTemplate>
-                                    <StackPanel VerticalAlignment="Stretch" Orientation="Horizontal" />
-                                </ItemsPanelTemplate>
-                            </ListView.ItemsPanel>
-                        </ListView>
-                        <Ellipse Width="40" Height="40">
-                            <Ellipse.Fill>
-                                <ImageBrush ImageSource="https://avatars.githubusercontent.com/u/12775813?v=4" />
-                            </Ellipse.Fill>
-                        </Ellipse>
-                    </StackPanel>
-                </DockPanel>
-            </Border>
-        </Grid>
+                            Orientation="Horizontal">
+                            <ListView
+                                HorizontalAlignment="Right"
+                                VerticalAlignment="Center"
+                                Background="Transparent"
+                                BorderThickness="0"
+                                ItemContainerStyle="{StaticResource NavItem}"
+                                ItemsSource="{Binding NavItems}"
+                                SelectedIndex="{Binding SelectedPageIndex}"
+                                SelectionMode="Single">
+                                <ListView.ItemsPanel>
+                                    <ItemsPanelTemplate>
+                                        <StackPanel VerticalAlignment="Stretch" Orientation="Horizontal" />
+                                    </ItemsPanelTemplate>
+                                </ListView.ItemsPanel>
+                            </ListView>
+                            <Ellipse Width="40" Height="40">
+                                <Ellipse.Fill>
+                                    <ImageBrush ImageSource="https://avatars.githubusercontent.com/u/12775813?v=4" />
+                                </Ellipse.Fill>
+                            </Ellipse>
+                        </StackPanel>
+                    </DockPanel>
+                </Border>
+            </Grid>
 
-        <Frame
-            Grid.Row="0"
-            Content="{Binding CurrentPage}"
-            NavigationUIVisibility="Hidden" />
-    </Grid>
+            <Frame
+                Grid.Row="0"
+                Content="{Binding CurrentPage}"
+                NavigationUIVisibility="Hidden" />
+        </Grid>
+    </Border>
 </Window>
