--- a/RockstarGamesLauncher/Views/Settings/SettingsUpdatesView.xaml
+++ b/RockstarGamesLauncher/Views/Settings/SettingsUpdatesView.xaml
@@ -3,7 +3,6 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:local="clr-namespace:RockstarGamesLauncher.Views.Settings"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
 
@@ -28,14 +27,19 @@
                     <Border Padding="0,20,0,20">
                         <Grid>
                             <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="*"></ColumnDefinition>
-                                <ColumnDefinition Width="Auto"></ColumnDefinition>
+                                <ColumnDefinition Width="*" />
+                                <ColumnDefinition Width="Auto" />
                             </Grid.ColumnDefinitions>
                             <StackPanel Grid.Column="0" Margin="0,0,10,0">
                                 <Label VerticalAlignment="Center" FontSize="16">Desktop notifications</Label>
-                                <TextBlock Text="The Rockstar Games Launcher will display desktop notifications for downloads &amp; errors" TextWrapping="Wrap" Margin="0,6,0,0" FontSize="14" Opacity="0.65" />
+                                <TextBlock
+                                    Margin="0,6,0,0"
+                                    FontSize="14"
+                                    Opacity="0.65"
+                                    Text="The Rockstar Games Launcher will display desktop notifications for downloads &amp; errors"
+                                    TextWrapping="Wrap" />
                             </StackPanel>
-                            <CheckBox Grid.Column="1" VerticalAlignment="Center"/>
+                            <CheckBox Grid.Column="1" VerticalAlignment="Center" />
                         </Grid>
                     </Border>
 
@@ -44,14 +48,19 @@
                     <Border Padding="0,20,0,20">
                         <Grid>
                             <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="*"></ColumnDefinition>
-                                <ColumnDefinition Width="Auto"></ColumnDefinition>
+                                <ColumnDefinition Width="*" />
+                                <ColumnDefinition Width="Auto" />
                             </Grid.ColumnDefinitions>
                             <StackPanel Grid.Column="0" Margin="0,0,10,0">
                                 <Label VerticalAlignment="Center" FontSize="16">Throttle downloads</Label>
-                                <TextBlock Text="Set the maximum amount of bandwidth available to the Rockstar Games Launcher for downloading game and launcher updates" TextWrapping="Wrap" Margin="0,6,0,0" FontSize="14" Opacity="0.65" />
+                                <TextBlock
+                                    Margin="0,6,0,0"
+                                    FontSize="14"
+                                    Opacity="0.65"
+                                    Text="Set the maximum amount of bandwidth available to the Rockstar Games Launcher for downloading game and launcher updates"
+                                    TextWrapping="Wrap" />
                             </StackPanel>
-                            <CheckBox Grid.Column="1" VerticalAlignment="Center"/>
+                            <CheckBox Grid.Column="1" VerticalAlignment="Center" />
                         </Grid>
                     </Border>
 
@@ -60,14 +69,19 @@
                     <Border Padding="0,20,0,20">
                         <Grid>
                             <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="*"></ColumnDefinition>
-                                <ColumnDefinition Width="Auto"></ColumnDefinition>
+                                <ColumnDefinition Width="*" />
+                                <ColumnDefinition Width="Auto" />
                             </Grid.ColumnDefinitions>
                             <StackPanel Grid.Column="0" Margin="0,0,10,0">
                                 <Label VerticalAlignment="Center" FontSize="16">Allow background downloads while in-game</Label>
-                                <TextBlock Text="Allow game and launcher updates in the background while running a game" TextWrapping="Wrap" Margin="0,6,0,0" FontSize="14" Opacity="0.65" />
+                                <TextBlock
+                                    Margin="0,6,0,0"
+                                    FontSize="14"
+                                    Opacity="0.65"
+                                    Text="Allow game and launcher updates in the background while running a game"
+                                    TextWrapping="Wrap" />
                             </StackPanel>
-                            <CheckBox Grid.Column="1" VerticalAlignment="Center"/>
+                            <CheckBox Grid.Column="1" VerticalAlignment="Center" />
                         </Grid>
                     </Border>
 
@@ -76,14 +90,19 @@
                     <Border Padding="0,20,0,20">
                         <Grid>
                             <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="*"></ColumnDefinition>
-                                <ColumnDefinition Width="Auto"></ColumnDefinition>
+                                <ColumnDefinition Width="*" />
+                                <ColumnDefinition Width="Auto" />
                             </Grid.ColumnDefinitions>
                             <StackPanel Grid.Column="0" Margin="0,0,10,0">
                                 <Label VerticalAlignment="Center" FontSize="16">Throttle in-game download</Label>
-                                <TextBlock Text="Set a cap on the amount of bandwidth afforded to background updates while running a game" TextWrapping="Wrap" Margin="0,6,0,0" FontSize="14" Opacity="0.65" />
+                                <TextBlock
+                                    Margin="0,6,0,0"
+                                    FontSize="14"
+                                    Opacity="0.65"
+                                    Text="Set a cap on the amount of bandwidth afforded to background updates while running a game"
+                                    TextWrapping="Wrap" />
                             </StackPanel>
-                            <CheckBox Grid.Column="1" VerticalAlignment="Center"/>
+                            <CheckBox Grid.Column="1" VerticalAlignment="Center" />
                         </Grid>
                     </Border>
                 </StackPanel>
